--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,8 @@
                         <li class="">
                             <div class="d-flex bd-highlight">
                                 <div class="img_cont">
-                                    <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img">
+                                    <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg"
+                                        class="rounded-circle user_img">
                                     <span class="online_icon"></span>
                                 </div>
                                 <div class="user_info">
@@ -17,10 +18,13 @@
                                 </div>
                             </div>
                             <div class="dropdownIcon">
-                                <i class="fa fa-ellipsis-h fa-pull-right" aria-hidden="true" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
-                                <ul class="dropdown-menu dropdown-menu-right menuList" aria-labelledby="dropdownMenuButton">
+                                <i class="fa fa-ellipsis-h fa-pull-right" aria-hidden="true" id="dropdownMenuButton"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+                                <ul class="dropdown-menu dropdown-menu-right menuList"
+                                    aria-labelledby="dropdownMenuButton">
                                     <li><a class="dropdown-item" href="#">My Profile</a></li>
-                                    <li><a class="dropdown-item" style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
+                                    <li><a class="dropdown-item" style="cursor: pointer;"
+                                            (click)="onLogout()">Logout</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -34,10 +38,12 @@
                 </div>
                 <div class="card-body contacts_body">
                     <ul class="contacts">
-                        <li style="cursor: pointer;" [class.active]="item.isActive" *ngFor="let item of users" (click)="openChat(item)">
+                        <li style="cursor: pointer;" [class.active]="item.isActive" *ngFor="let item of users"
+                            (click)="openChat(item)">
                             <div class="d-flex bd-highlight">
                                 <div class="img_cont">
-                                    <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img">
+                                    <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg"
+                                        class="rounded-circle user_img">
                                     <span class="online_icon" [class.offline]="!item.isOnline"></span>
                                 </div>
                                 <div class="user_info">
@@ -57,7 +63,8 @@
                 <div class="card-header msg_head ">
                     <div class="d-flex bd-highlight">
                         <div class="img_cont">
-                            <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img">
+                            <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg"
+                                class="rounded-circle user_img">
                             <span class="online_icon"></span>
                         </div>
                         <div class="user_info">
@@ -69,14 +76,19 @@
                     <div *ngFor="let m of displayMessages">
                         <div class="messageItem">
                             <section>
-                                <i *ngIf="m.type==='recieved'" class="fa fa-ellipsis-h messageListIcon" aria-hidden="true" style="display: none;" id="{{m.id}}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+                                <i *ngIf="m.type==='recieved'" class="fa fa-ellipsis-h messageListIcon"
+                                    aria-hidden="true" style="display: none;" id="{{m.id}}" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false"></i>
                                 <ul class="dropdown-menu userList" attr.aria-valuenow="{{m.id}}">
-                                    <li><a class="dropdown-item mouseCursor" (click)="deleteMessage(m,'DeleteForMe',false)">Remove Only For Me</a></li>
+                                    <li><a class="dropdown-item mouseCursor"
+                                            (click)="deleteMessage(m,'DeleteForMe',false)">Remove Only For Me</a></li>
                                 </ul>
                             </section>
-                            <div class="d-flex justify-content-start mb-4" *ngIf="m.type==='recieved' && !m.isReceiverDeleted">
+                            <div class="d-flex justify-content-start mb-4"
+                                *ngIf="m.type==='recieved' && !m.isReceiverDeleted">
                                 <div class="img_cont_msg">
-                                    <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img_msg">
+                                    <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg"
+                                        class="rounded-circle user_img_msg">
                                 </div>
                                 <div class="msg_cotainer">
                                     {{m.content}}
@@ -86,10 +98,15 @@
                         </div>
                         <div class="messageItem">
                             <section>
-                                <i *ngIf="m.type==='sent'" class="fa fa-ellipsis-h messageListIcon" aria-hidden="true" style="display: none;" id="{{m.id}}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+                                <i *ngIf="m.type==='sent'" class="fa fa-ellipsis-h messageListIcon" aria-hidden="true"
+                                    style="display: none;" id="{{m.id}}" data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false"></i>
                                 <ul class="dropdown-menu userList" attr.aria-valuenow="{{m.id}}">
-                                    <li><a class="dropdown-item mouseCursor" (click)="deleteMessage(m,'DeleteForMe',true)">Remove Only For Me</a></li>
-                                    <li><a class="dropdown-item mouseCursor" (click)="deleteMessage(m,'DeleteForEveryone',true)">Remove For Everyone</a></li>
+                                    <li><a class="dropdown-item mouseCursor"
+                                            (click)="deleteMessage(m,'DeleteForMe',true)">Remove Only For Me</a></li>
+                                    <li><a class="dropdown-item mouseCursor"
+                                            (click)="deleteMessage(m,'DeleteForEveryone',true)">Remove For Everyone</a>
+                                    </li>
                                 </ul>
                             </section>
 
@@ -99,7 +116,8 @@
                                     <span class="msg_time_send">8:55 AM, Today</span>
                                 </div>
                                 <div class="img_cont_msg">
-                                    <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img_msg">
+                                    <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg"
+                                        class="rounded-circle user_img_msg">
                                 </div>
                             </div>
                         </div>
@@ -111,7 +129,8 @@
                         <div class="input-group-append">
                             <span class="input-group-text attach_btn"><i class="fas fa-paperclip"></i></span>
                         </div>
-                        <textarea name="" [(ngModel)]="message" class="form-control type_msg" placeholder="Type your message..."></textarea>
+                        <textarea name="" [(ngModel)]="message" class="form-control type_msg"
+                            placeholder="Type your message..."></textarea>
                         <div class="input-group-append" (click)="SendDirectMessage()">
                             <span class="input-group-text send_btn"><i class="fas fa-location-arrow"></i></span>
                         </div>
@@ -121,3 +140,5 @@
         </div>
     </div>
 </div>
+
+
