--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,4 +1,51 @@
-<img src="/assets/img/single_user.png" class="mx-auto d-block">
+<div class="account-box">
+  <a href="#" class="logo">
+      <img src="/assets/img/single_user.png" alt="">
+  </a>
+  <div class="account-box-title text-right">ورود به چتباز</div>
+  <div class="account-box-content">
+      <form class="form-account" #form='ngForm' class="mb-4" autocomplete="off" (submit)="onSubmit(form)">
+          <div class="form-account-title">ایمیل یا شماره موبایل</div>
+          <div class="form-account-row">
+              <label class="input-label"><i class="now-ui-icons users_single-02"></i></label>
+              <input class="input-field" type="text" #UserName="ngModel" name="Email" [(ngModel)]="formModel.Email" required
+                  placeholder="ایمیل یا شماره موبایل خود را وارد نمایید">
+          </div>
+          <!-- <div class="form-account-title">رمز عبور
+              <a href="" class="btn-link-border form-account-link">رمز
+                  عبور خود را فراموش
+                  کرده ام</a>
+          </div>
+          <div class="form-account-row">
+              <label class="input-label"><i
+                      class="now-ui-icons ui-1_lock-circle-open"></i></label>
+              <input class="input-field" type="password"
+                  placeholder="رمز عبور خود را وارد نمایید">
+          </div>--> 
+           <div class="form-account-row form-account-submit">
+              <div class="parent-btn">
+                  <button class="dk-btn dk-btn-info"  [disabled]="form.invalid">
+                      ورود به چتباز
+                      <i class="fa fa-sign-in"></i>
+                  </button>
+              </div>
+          </div> 
+          <!-- <div class="form-account-agree">
+              <label class="checkbox-form checkbox-primary">
+                  <input type="checkbox" checked="checked" id="agree">
+                  <span class="checkbox-check"></span>
+              </label>
+              <label for="agree">مرا به خاطر داشته باش</label>
+          </div> -->
+      </form>
+  </div>
+  <div class="account-box-footer">
+      <span>کاربر جدید هستید؟</span>
+      <a class="btn-link-border mb-sm-3" routerLink='/user/registration' routerLinkActive='active'>ثبت نام</a>
+  </div>
+</div>
+
+<!-- <img src="/assets/img/single_user.png" class="mx-auto d-block">
 <form #form='ngForm' class="mb-4" autocomplete="off" (submit)="onSubmit(form)">
   <div class="form-group">
     <label>Email</label>
@@ -9,4 +56,4 @@
       <button type="submit" class="btn btn-primary btn-block btn-round" [disabled]="form.invalid">Login</button>
     </div>
   </div>
-</form>
+</form> -->
