--- a/src/app/user/registration/registration.component.html
+++ b/src/app/user/registration/registration.component.html
@@ -1,23 +1,25 @@
-<form [formGroup]="service.formModel" autocomplete="off" (submit)="onSubmit()">
+<form [formGroup]="service.formModel" autocomplete="off" (submit)="onSubmit()" >
 
   <div class="form-group">
-    <label>Email</label>
-    <input class="form-control" formControlName="Email">
+    <label dir="rtl" style="float: right;">ایمیل :</label>
+    <input dir="rtl" class="form-control" formControlName="Email">
     <!-- <label class="text-danger" *ngIf="service.formModel.get('Email').touched && service.formModel.get('Email').errors?.['email']">Invalid
       email address.</label> -->
   </div>
-  <div class="form-group">
-    <label>First Name</label>
-    <input class="form-control" formControlName="FirstName">
+  <div class="form-group" dir="rtl">
+    <label dir="rtl" style="float: right;">نام : </label>
+    <input class="form-control" dir="rtl" formControlName="FirstName">
   </div>
   <div class="form-group">
-    <label>Last Name</label>
-    <input class="form-control" formControlName="LastName">
+    <label dir="rtl" style="float: right;">نام خانوادگی : </label>
+    <input class="form-control" dir="rtl" formControlName="LastName">
   </div>
 
   <div class="form-row">
     <div class="form-group col-md-8 offset-md-2">
-      <button type="submit" class="btn btn-primary btn-round btn-block" [disabled]="!service.formModel.valid">Sign Up</button>
+      <button type="submit" class="btn btn-primary btn-round btn-block" dir="rtl"
+        [disabled]="!service.formModel.valid">ثبت
+        نام</button>
     </div>
   </div>
 </form>
