--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,8 @@
 <div class="wrapper">
   <div class="wrapped-div">
     <div class="tab-header">
-      <h2  class="btn btn-success mb-sm-3" routerLink='/user/login' routerLinkActive='active'>Sign In</h2>
-      <h2 class="btn btn-primary mb-sm-3" routerLink='/user/registration' routerLinkActive='active'>Sign Up</h2>
+      <h2  class="btn btn-success mb-sm-3" routerLink='/user/login' routerLinkActive='active'>ورود</h2>
+      <h2 class="btn btn-primary mb-sm-3" routerLink='/user/registration' routerLinkActive='active'>ثبت نام</h2>
     </div>
     <div class="row">
       <div class="col-md-10 offset-md-1">
